added placeholder on homepage

--- a/webApp/app/templates/index.html
+++ b/webApp/app/templates/index.html
@@ -28,4 +28,9 @@
         <br>
         <br>
     {% endfor %}
+    <table>
+        <tr valign="top">
+            <td>placeholder</td>
+        </tr>
+    </table>
 {% endblock %}
