--- a/webApp/app/templates/index.html
+++ b/webApp/app/templates/index.html
@@ -29,7 +29,7 @@
         <br>
     {% endfor %}
     <table>
-        <tr valign="top">
+        <tr valign="tom">
             <td>placeholder</td>
         </tr>
     </table>
