got dict of JSON daata

--- a/webApp/app/templates/index.html
+++ b/webApp/app/templates/index.html
@@ -29,9 +29,9 @@
         <br>
     {% endfor %}
     <table>
-        {% for post in posts4 %}
+        {% for scene in scenes %}
         <tr valign="tom">
-            <td>{{ post.id }}</td>
+            <td>{{ scene.id }}</td>
         </tr>
         {% endfor %}
     </table>
