editied the start time and added usless button

--- a/webApp/app/templates/index.html
+++ b/webApp/app/templates/index.html
@@ -35,10 +35,10 @@
             <tr>
                 <th scope="col">Day</th>
                 <th scope="col">Color</th>
-                <th scope="col">Bright</th>
+                <th scope="col">Brightness</th>
                 <th scope="col">Mode</th>
-                <th scope="col">ID</th>
                 <th scope="col">Start Time</th>
+                <th scope="col">Edit Scene</th>
         
             </tr>
         </thead>
@@ -50,8 +50,8 @@
             <td>{{ scene.color }}</td> 
             <td>{{ scene.brightness }}</td>    
             <td>{{ scene.mode }}</td>
-            <td>{{ scene.id }}</td>
             <td>{{ scene.start_time }}</td>
+            <td><button type="button" class="btn btn-primary btn-sm">Edit</button></td>
         </tr>
     {% endif %}
     {% endfor %}
@@ -62,8 +62,8 @@
             <td>{{ scene.color }}</td> 
             <td>{{ scene.brightness }}</td>    
             <td>{{ scene.mode }}</td>
-            <td>{{ scene.id }}</td>
             <td>{{ scene.start_time }}</td>
+            <td><button type="button" class="btn btn-primary btn-sm">Edit</button></td>
         </tr>
     {% endif %}
     {% endfor %}
@@ -74,8 +74,8 @@
             <td>{{ scene.color }}</td> 
             <td>{{ scene.brightness }}</td>    
             <td>{{ scene.mode }}</td>
-            <td>{{ scene.id }}</td>
             <td>{{ scene.start_time }}</td>
+            <td><button type="button" class="btn btn-primary btn-sm">Edit</button></td>
         </tr>
     {% endif %}
     {% endfor %}
@@ -86,8 +86,8 @@
             <td>{{ scene.color }}</td> 
             <td>{{ scene.brightness }}</td>    
             <td>{{ scene.mode }}</td>
-            <td>{{ scene.id }}</td>
             <td>{{ scene.start_time }}</td>
+            <td><button type="button" class="btn btn-primary btn-sm">Edit</button></td>
         </tr>
     {% endif %}
     {% endfor %}
@@ -98,8 +98,8 @@
             <td>{{ scene.color }}</td> 
             <td>{{ scene.brightness }}</td>    
             <td>{{ scene.mode }}</td>
-            <td>{{ scene.id }}</td>
             <td>{{ scene.start_time }}</td>
+            <td><button type="button" class="btn btn-primary btn-sm">Edit</button></td>
         </tr>
     {% endif %}
     {% endfor %}
