made a new form to input info to edit schedule

--- a/webApp/app/templates/index.html
+++ b/webApp/app/templates/index.html
@@ -51,7 +51,7 @@
             <td>{{ scene.brightness }}</td>    
             <td>{{ scene.mode }}</td>
             <td>{{ scene.start_time }}</td>
-            <td><a type="button" class="btn btn-primary btn-sm" href="">Edit</a></td>
+            <td><a type="button" class="btn btn-primary btn-sm" href="{{ url_for('editschedule') }}">Edit</a></td>
         </tr>
     {% endif %}
     {% endfor %}
