--- a/webApp/app/templates/index.html
+++ b/webApp/app/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% import 'bootstrap/wtf.html' as wtf %}
 
+
 {% block app_content %}
     <h1>Hi, {{ current_user.username }}!</h1>
     {% if form %}
@@ -30,8 +31,8 @@
     {% endfor %}
 
 
-    <table class = "table">
-        <thead class = "thead-dark">
+    <table class = "table table-striped table-hover">
+        <thead class="thead-dark">
             <tr>
                 <th scope="col">Day</th>
                 <th scope="col">Color</th>
@@ -39,7 +40,6 @@
                 <th scope="col">Mode</th>
                 <th scope="col">Start Time</th>
                 <th scope="col">Edit Scene</th>
-        
             </tr>
         </thead>
         <tbody>
@@ -55,6 +55,8 @@
         </tr>
     {% endif %}
     {% endfor %}
+
+
     {% for scene in dataDict %}
     {% if scene.day_of_week == "tuesday" %}
         <tr>
@@ -67,6 +69,8 @@
         </tr>
     {% endif %}
     {% endfor %}
+
+
     {% for scene in dataDict %}
     {% if scene.day_of_week == "wednesday" %}
         <tr>
@@ -79,6 +83,8 @@
         </tr>
     {% endif %}
     {% endfor %}
+
+
     {% for scene in dataDict %}
     {% if scene.day_of_week == "thursday" %}
         <tr>
@@ -91,6 +97,8 @@
         </tr>
     {% endif %}
     {% endfor %}
+
+
     {% for scene in dataDict %}
     {% if scene.day_of_week == "friday" %}
         <tr>
