--- a/webApp/app/templates/index.html
+++ b/webApp/app/templates/index.html
@@ -47,7 +47,7 @@
     {% if scene.day_of_week == "monday" %}
         <tr>
             <td>{{ scene.day_of_week }}</td>
-            <td>{{ scene.color }}</td> 
+            <td style="background-color:{{ scene.color }}"></td> 
             <td>{{ scene.brightness }}</td>    
             <td>{{ scene.mode }}</td>
             <td>{{ scene.start_time }}</td>
@@ -61,7 +61,7 @@
     {% if scene.day_of_week == "tuesday" %}
         <tr>
             <td>{{ scene.day_of_week }}</td>
-            <td>{{ scene.color }}</td> 
+            <td style="background-color:{{ scene.color }}"></td> 
             <td>{{ scene.brightness }}</td>    
             <td>{{ scene.mode }}</td>
             <td>{{ scene.start_time }}</td>
@@ -75,7 +75,7 @@
     {% if scene.day_of_week == "wednesday" %}
         <tr>
             <td>{{ scene.day_of_week }}</td>
-            <td>{{ scene.color }}</td> 
+            <td style="background-color:{{ scene.color }}"></td> 
             <td>{{ scene.brightness }}</td>    
             <td>{{ scene.mode }}</td>
             <td>{{ scene.start_time }}</td>
@@ -89,7 +89,7 @@
     {% if scene.day_of_week == "thursday" %}
         <tr>
             <td>{{ scene.day_of_week }}</td>
-            <td>{{ scene.color }}</td> 
+            <td style="background-color:{{ scene.color }}"></td> 
             <td>{{ scene.brightness }}</td>    
             <td>{{ scene.mode }}</td>
             <td>{{ scene.start_time }}</td>
@@ -103,7 +103,7 @@
     {% if scene.day_of_week == "friday" %}
         <tr>
             <td>{{ scene.day_of_week }}</td>
-            <td>{{ scene.color }}</td> 
+            <td style="background-color:{{ scene.color }}"></td> 
             <td>{{ scene.brightness }}</td>    
             <td>{{ scene.mode }}</td>
             <td>{{ scene.start_time }}</td>
