--- a/webApp/app/templates/index.html
+++ b/webApp/app/templates/index.html
@@ -29,7 +29,9 @@
         <br>
         <br>
     {% endfor %}
-
+        <br>
+        <p><a type="button" class="btn btn-primary btn-lg" href="{{ url_for('addscene') }}">Add Scene</a></p>
+        <br>
 
     <table class = "table table-striped table-hover">
         <thead class="thead-dark">
