made a button greeen

--- a/webApp/app/templates/index.html
+++ b/webApp/app/templates/index.html
@@ -30,7 +30,7 @@
         <br>
     {% endfor %}
         <br>
-        <p><a type="button" class="btn btn-primary btn-lg" href="{{ url_for('addscene') }}">Add Scene</a></p>
+        <p><a type="button" class="btn btn-success btn-lg" href="{{ url_for('addscene') }}">Add Scene</a></p>
         <br>
 
     <table class = "table table-striped table-hover">
