--- a/webApp/app/templates/index.html
+++ b/webApp/app/templates/index.html
@@ -55,7 +55,7 @@
             <td>{{ scene.mode }}</td>
             <td>{{ scene.start_time }}</td>
             <td><a type="button" class="btn btn-primary btn-sm" href="{{ url_for('editschedule', id=scene.id) }}">Edit</a></td>
-            <td><a type="button" class="btn btn-danger btn-sm">Delete</a></td>
+            <td><a type="button" class="btn btn-danger btn-sm" href="{{ url_for('deleteScene', id=scene.id) }}" onclick="return confirm('Are you sure you want to delete this item?');">Delete</a></td>
         </tr>
     {% endif %}
     {% endfor %}
