fixed how the app looks so it makes more sense

--- a/webApp/app/templates/index.html
+++ b/webApp/app/templates/index.html
@@ -9,6 +9,10 @@
     <br>
     {% endif %}
 
+<!--
+
+    override stuff
+
     <h3>Override Existing LEDs:</h3>
     <br>
     {% for post in posts1 %}
@@ -29,6 +33,8 @@
         <br>
         <br>
     {% endfor %}
+-->
+
         <br>
         <p><a type="button" class="btn btn-success btn-lg" href="{{ url_for('addscene') }}">Add Scene</a></p>
         <br>
