--- a/webApp/app/templates/index.html
+++ b/webApp/app/templates/index.html
@@ -4,6 +4,7 @@
 
 {% block app_content %}
     <h1>Hi, {{ current_user.username }}!</h1>
+    <p class="text-danger"> WARNING: Editing scenes on this page updates lights for ALL classrooms!</p>
     {% if form %}
     {{ wtf.quick_form(form) }}
     <br>
